Article img overlap fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -105,5 +105,6 @@ article, .article{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
   }
 }
